--- a/redux-testing/src/index.css
+++ b/redux-testing/src/index.css
@@ -14,6 +14,11 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 1.6rem;
+  min-height: 100vh;
+}
+
+#root, .App {
+  min-height: 100vh;
 }
 
 h1 {
